--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,10 @@
 [build]
-  command = "npm run build"
+  command = "npm install && npm run build"
   publish = "dist"
+  environment = { NODE_VERSION = "18" }
+
+[build.environment]
+  NODE_ENV = "production"
 
 [[redirects]]
   from = "/*"
