--- a/package.json
+++ b/package.json
@@ -10,26 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^11.0.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-helmet-async": "^2.0.4",
-    "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.3"
+    "framer-motion": "11.0.8",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-helmet-async": "2.0.4",
+    "react-icons": "5.0.1",
+    "react-router-dom": "6.22.3"
   },
   "devDependencies": {
-    "@heroicons/react": "^2.1.1",
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.21",
-    "@eslint/config-array": "^1.0.0",
-    "@eslint/object-schema": "^1.0.0",
-    "eslint": "^9.0.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.5.4",
-    "tailwindcss": "^3.4.17",
-    "vite": "^5.1.6"
+    "@heroicons/react": "2.1.1",
+    "@types/react": "18.2.64",
+    "@types/react-dom": "18.2.21",
+    "@vitejs/plugin-react": "4.2.1",
+    "autoprefixer": "10.4.21",
+    "eslint": "8.57.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.5",
+    "postcss": "8.5.4",
+    "tailwindcss": "3.4.17",
+    "vite": "5.1.6"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
