--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.5",
     "postcss": "8.5.4",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "3.4.17",
     "terser": "^5.29.2",
-    "vite": "5.1.6",
-    "vite-plugin-compression": "^0.5.1",
-    "rollup-plugin-visualizer": "^5.12.0"
+    "vite": "^5.1.6",
+    "vite-plugin-compression": "^0.5.1"
   },
   "engines": {
     "node": ">=18.0.0"
