--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "analyze": "vite build --mode analyze"
   },
   "dependencies": {
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.0",
+    "@mui/icons-material": "7.1.1",
+    "@mui/material": "7.1.1",
+    "date-fns": "4.1.0",
     "framer-motion": "11.0.8",
     "react": "18.3.1",
     "react-dom": "18.3.1",
