--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "7.1.1",
     "date-fns": "4.1.0",
     "framer-motion": "11.0.8",
+    "lucide-react": "0.542.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-helmet": "6.1.0",
