--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "11.14.0",
     "@mui/icons-material": "7.1.1",
     "@mui/material": "7.1.1",
+    "@vercel/analytics": "1.5.0",
     "date-fns": "4.1.0",
     "framer-motion": "11.0.8",
     "lucide-react": "0.542.0",
